--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.0.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
@@ -26,6 +29,7 @@
     "@nx/workspace": "16.4.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
+    "@types/passport-local": "^1.0.35",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "~8.15.0",
