--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "^10.0.0",
     "axios": "^1.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "postgres": "^3.3.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
