--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/microservices": "^10.0.4",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^10.0.0",
     "axios": "^1.0.0",
+    "joi": "^17.9.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "postgres": "^3.3.5",
