--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "s": "nx run-many --parallel --target=serve --projects gateway auth"
+    "s": "nx run-many --parallel --target=serve --projects gateway auth users",
+    "s2": "nx run-many --parallel --target=serve --projects gateway auth "
   },
   "private": true,
   "dependencies": {
@@ -22,6 +23,7 @@
     "joi": "^17.9.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.1",
     "postgres": "^3.3.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
