--- a/apps/gateway/env/local.env
+++ b/apps/gateway/env/local.env
@@ -3,10 +3,8 @@ RMQ_MAILER_QUEUE=mailer
 RMQ_USERS_QUEUE=users
 RMQ_AUTH_QUEUE=auth
 
-APP_PORT=3001
-
+APP_PORT=3000
 HTTP_TIMEOUT=25000
 HTTP_MAX_REDIRECTS=5
 
-
-MAILER_TRANSPORT='smtps://user@domain.com:pass@smtp.domain.com'
+GLOBAL_PREFIX=api
